[Add] endpoints & entities
